<resources>
    <string name="app_name">Adivina!</string>
    <string name="initGame">Iniciar Juego</string>
    <string name="typeNumber">Ingresa el número</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="enterNumber">Ingresa el número.</string>
    <string name="failureMessage">Fallaste!</string>
    <string name="tryAgain">¿Jugar de nuevo?</string>
    <string name="play">Jugar</string>
    <string name="cancel">Cancelar</string>
    <string name="youWin">¡¡Ganaste!!</string>

</resources>
