<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:padding="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:padding="@dimen/activity_vertical_margin"
        android:layout_above="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textArea"
            android:text="@string/enterNumber"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/titleSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:text="@string/failureMessage"
            android:id="@+id/messageView"
            android:textSize="@dimen/extraLargeSize"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/zeroBtn"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="@dimen/titleSize"
                android:text="@string/zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/oneBtn"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/twoBtn"
                android:text="@string/two"
                android:layout_weight="2"
                android:textSize="@dimen/titleSize"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/threeBtn"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/three"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/fourBtn"
                android:text="@string/four"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:padding="8dp"
                android:layout_weight="2"
                android:src="@drawable/ic_undo"
                android:id="@+id/undo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <View
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/fiveBtn"
                android:layout_weight="2"
                android:text="@string/five"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/sixBtn"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/six"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/sevenBtn"
                android:gravity="center"
                android:text="@string/seven"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/eightBtn"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:textSize="@dimen/titleSize"
                android:id="@+id/nineBtn"
                android:text="@string/nine"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:padding="4dp"
                android:src="@drawable/ic_done"
                android:id="@+id/done"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

    <com.luolc.emojirain.EmojiRainLayout
        android:id="@+id/emojiContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
