<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="wrap_content">


    <TextView
        android:textSize="20sp"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:text="@string/youWin"
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="42dp" />

    <TextView
        android:textSize="17sp"
        android:gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/tryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/cancelBtn"
            android:textColor="@color/green"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/playBtn"
            android:textColor="@color/green"
            android:text="@string/play"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>